# CPP2

./: .gitignore  CMakeLists.txt  miit.pc.in  miit_export.h
.github/workflows/: build.yaml
demo/: CMakeLists.txt  demo.cxx
include/: vec.hpp  vec2.hpp
includes/: lib.hpp
src/: lib.cpp  vec.cpp  vec.inl  vec2.cpp
tests/: CMakeLists.txt  lib.cxx  lib_test.cxx  tests.cxx
